fix(mockito): add mockito as javaagent
Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>